tried fix for .experience-item:before hz position on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -524,7 +524,7 @@ print {
         display: none;
     }
     .experience-item:before {
-        left:-1.5rem;
+        left:-1.3rem;
     }
 }
 
